--- a/style/main.css
+++ b/style/main.css
@@ -241,70 +241,114 @@ hr {
   height: 106.25px;
   pointer-events:none;
   line-height: 116.25px; }
-  .tile.tile-position-1-1 {
+  .tile.tile-position-1-1-1 {
     position: absolute;
     left: 0px;
     top: 0px; }
-  .tile.tile-position-1-2 {
+  .tile.tile-position-1-2-1 {
     position: absolute;
     left: 0px;
     top: 121px; }
-  .tile.tile-position-1-3 {
+  .tile.tile-position-1-3-1 {
     position: absolute;
     left: 0px;
     top: 243px; }
-  .tile.tile-position-1-4 {
+  .tile.tile-position-1-1-2 {
     position: absolute;
-    left: 0px;
-    top: 364px; }
-  .tile.tile-position-2-1 {
+    left: 380px;
+    top: 0px; }
+  .tile.tile-position-1-2-2 {
+    position: absolute;
+    left: 380px;
+    top: 121px; }
+  .tile.tile-position-1-3-2 {
+    position: absolute;
+    left: 380px;
+    top: 243px; }
+  .tile.tile-position-1-1-3 {
+    position: absolute;
+    left: 760px;
+    top: 0px; }
+  .tile.tile-position-1-2-3 {
+    position: absolute;
+    left: 760px;
+    top: 121px; }
+  .tile.tile-position-1-3-3 {
+    position: absolute;
+    left: 760px;
+    top: 243px; }
+  .tile.tile-position-2-1-1 {
     position: absolute;
     left: 121px;
     top: 0px; }
-  .tile.tile-position-2-2 {
+  .tile.tile-position-2-2-1 {
     position: absolute;
     left: 121px;
     top: 121px; }
-  .tile.tile-position-2-3 {
+  .tile.tile-position-2-3-1 {
     position: absolute;
     left: 121px;
     top: 243px; }
-  .tile.tile-position-2-4 {
+  .tile.tile-position-2-1-2 {
     position: absolute;
-    left: 121px;
-    top: 364px; }
-  .tile.tile-position-3-1 {
+    left: 501px;
+    top: 0px; }
+  .tile.tile-position-2-2-2 {
+    position: absolute;
+    left: 501px;
+    top: 121px; }
+  .tile.tile-position-2-3-2 {
+    position: absolute;
+    left: 501px;
+    top: 243px; }
+  .tile.tile-position-2-1-3 {
+    position: absolute;
+    left: 881px;
+    top: 0px; }
+  .tile.tile-position-2-2-3 {
+    position: absolute;
+    left: 881px;
+    top: 121px; }
+  .tile.tile-position-2-3-3 {
+    position: absolute;
+    left: 881px;
+    top: 243px; } 
+  .tile.tile-position-3-1-1 {
     position: absolute;
     left: 243px;
     top: 0px; }
-  .tile.tile-position-3-2 {
+  .tile.tile-position-3-2-1 {
     position: absolute;
     left: 243px;
     top: 121px; }
-  .tile.tile-position-3-3 {
+  .tile.tile-position-3-3-1 {
     position: absolute;
     left: 243px;
     top: 243px; }
-  .tile.tile-position-3-4 {
+  .tile.tile-position-3-1-2 {
     position: absolute;
-    left: 243px;
-    top: 364px; }
-  .tile.tile-position-4-1 {
-    position: absolute;
-    left: 364px;
+    left: 623px;
     top: 0px; }
-  .tile.tile-position-4-2 {
+  .tile.tile-position-3-2-2 {
     position: absolute;
-    left: 364px;
+    left: 623px;
     top: 121px; }
-  .tile.tile-position-4-3 {
+  .tile.tile-position-3-3-2 {
     position: absolute;
-    left: 364px;
+    left: 623px;
     top: 243px; }
-  .tile.tile-position-4-4 {
+  .tile.tile-position-3-1-3 {
     position: absolute;
-    left: 364px;
-    top: 364px; }
+    left: 1003px;
+    top: 0px; }
+  .tile.tile-position-3-2-3 {
+    position: absolute;
+    left: 1003px;
+    top: 121px; }
+  .tile.tile-position-3-3-3 {
+    position: absolute;
+    left: 1003px;
+    top: 243px; }
 
 .tile {
   border-radius: 3px;
@@ -375,6 +419,13 @@ hr {
     @media screen and (max-width: 480px) {
       .tile.tile-2048 {
         font-size: 15px; } }
+  .tile.tile-super {
+    color: #f9f6f2;
+    background: #3c3a32;
+    font-size: 30px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-super .tile-inner {
+        font-size: 10px; } }
 
 @-webkit-keyframes appear {
   0% {
