--- a/style/main.css
+++ b/style/main.css
@@ -151,8 +151,8 @@ hr {
   -moz-user-select: none;
   background: #bbada0;
   border-radius: 6px;
-  width: 1140px;
-  height: 380px;
+  width: 550px;
+  height:700px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
@@ -205,13 +205,23 @@ hr {
 
 .grid-container {
   position: absolute;
-  z-index: 1; }
-
+  z-index: 1;  
+  -webkit-transform: rotateX(70deg) rotateZ(45deg);
+}
 .grid-container.level2 {
-  left: 395px; }
+  margin-top: 170px;
+margin-left:77px;
+  }
+.grid-container.level1 {
+  margin-top: 340px;
+margin-left:77px;
+  }
 
 .grid-container.level3 {
-  left: 775px; }
+  margin-top: 0px;
+margin-left:77px;
+  }
+
 
 .grid-row {
   margin-bottom: 15px; }
@@ -234,17 +244,59 @@ hr {
 
 .tile-container {
   position: absolute;
-  z-index: 2; }
+  z-index: 2;
+  margin-left: 250px;
+  -webkit-transition: -webkit-transform 2s ease;
+  -webkit-transform: rotateX(70deg) rotateZ(45deg); }
 
 .tile {
   width: 106.25px;
   height: 106.25px;
   pointer-events:none;
   line-height: 116.25px; }
+
+  .tile.tile-position-1-1-1,
+  .tile.tile-position-1-2-1,
+  .tile.tile-position-1-3-1,
+  .tile.tile-position-2-1-1,
+  .tile.tile-position-2-2-1,
+  .tile.tile-position-2-3-1,
+  .tile.tile-position-3-1-1,
+  .tile.tile-position-3-2-1,
+  .tile.tile-position-3-3-1 {
+    margin-top: 186px;
+    margin-left: 186px;
+  }
+  .tile.tile-position-1-1-2,
+  .tile.tile-position-1-2-2,
+  .tile.tile-position-1-3-2,
+  .tile.tile-position-2-1-2,
+  .tile.tile-position-2-2-2,
+  .tile.tile-position-2-3-2,
+  .tile.tile-position-3-1-2,
+  .tile.tile-position-3-2-2,
+  .tile.tile-position-3-3-2 {
+    margin-top: 537px;
+    margin-left: 537px;
+  }
+  .tile.tile-position-1-1-3,
+  .tile.tile-position-1-2-3,
+  .tile.tile-position-1-3-3,
+  .tile.tile-position-2-1-3,
+  .tile.tile-position-2-2-3,
+  .tile.tile-position-2-3-3,
+  .tile.tile-position-3-1-3,
+  .tile.tile-position-3-2-3,
+  .tile.tile-position-3-3-3 {
+    margin-top: 888px;
+    margin-left: 888px;
+  }
+  
   .tile.tile-position-1-1-1 {
     position: absolute;
     left: 0px;
-    top: 0px; }
+    top: 0px; 
+  }
   .tile.tile-position-1-2-1 {
     position: absolute;
     left: 0px;
@@ -255,27 +307,27 @@ hr {
     top: 243px; }
   .tile.tile-position-1-1-2 {
     position: absolute;
-    left: 380px;
+    left: 0px;
     top: 0px; }
   .tile.tile-position-1-2-2 {
     position: absolute;
-    left: 380px;
+    left: 0px;
     top: 121px; }
   .tile.tile-position-1-3-2 {
     position: absolute;
-    left: 380px;
+    left: 0px;
     top: 243px; }
   .tile.tile-position-1-1-3 {
     position: absolute;
-    left: 760px;
+    left: 0px;
     top: 0px; }
   .tile.tile-position-1-2-3 {
     position: absolute;
-    left: 760px;
+    left: 0px;
     top: 121px; }
   .tile.tile-position-1-3-3 {
     position: absolute;
-    left: 760px;
+    left: 0px;
     top: 243px; }
   .tile.tile-position-2-1-1 {
     position: absolute;
@@ -291,27 +343,27 @@ hr {
     top: 243px; }
   .tile.tile-position-2-1-2 {
     position: absolute;
-    left: 501px;
+    left: 121px;
     top: 0px; }
   .tile.tile-position-2-2-2 {
     position: absolute;
-    left: 501px;
+    left: 121px;
     top: 121px; }
   .tile.tile-position-2-3-2 {
     position: absolute;
-    left: 501px;
+    left: 121px;
     top: 243px; }
   .tile.tile-position-2-1-3 {
     position: absolute;
-    left: 881px;
+    left: 121px;
     top: 0px; }
   .tile.tile-position-2-2-3 {
     position: absolute;
-    left: 881px;
+    left: 121px;
     top: 121px; }
   .tile.tile-position-2-3-3 {
     position: absolute;
-    left: 881px;
+    left: 121px;
     top: 243px; } 
   .tile.tile-position-3-1-1 {
     position: absolute;
@@ -327,27 +379,27 @@ hr {
     top: 243px; }
   .tile.tile-position-3-1-2 {
     position: absolute;
-    left: 623px;
+    left: 243px;
     top: 0px; }
   .tile.tile-position-3-2-2 {
     position: absolute;
-    left: 623px;
+    left: 243px;
     top: 121px; }
   .tile.tile-position-3-3-2 {
     position: absolute;
-    left: 623px;
+    left: 243px;
     top: 243px; }
   .tile.tile-position-3-1-3 {
     position: absolute;
-    left: 1003px;
+    left: 243px;
     top: 0px; }
   .tile.tile-position-3-2-3 {
     position: absolute;
-    left: 1003px;
+    left: 243px;
     top: 121px; }
   .tile.tile-position-3-3-3 {
     position: absolute;
-    left: 1003px;
+    left: 243px;
     top: 243px; }
 
 .tile {
